[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://libs/gui/interfaces/plugin_editor/modules/editor_window/plugin_editor_window.gd" id="1_i830a"]
[ext_resource type="PackedScene" path="res://libs/gui/interfaces/plugin_editor/plugin_editor.tscn" id="2_1cb4y"]
[ext_resource type="PackedScene" path="res://libs/gui/interfaces/plugin_editor/modules/editor_window/modules/exit_confirm/exit_confirm_window.tscn" id="3_scsvk"]


[node name="PluginEditorWindow" type="Window"]
title = "RainyBot插件编辑器 (测试版)"
size = Vector2i(1280, 720)
visible = false
min_size = Vector2i(640, 360)
script = ExtResource( "1_i830a" )

[node name="PluginEditor" parent="." instance=ExtResource( "2_1cb4y" )]

[node name="ExitConfirmWindow" parent="." instance=ExtResource( "3_scsvk" )]
title = "未保存的文件..."

[connection signal="close_requested" from="." to="." method="_on_EditorWindow_close_requested"]
[connection signal="confirm_pressed" from="ExitConfirmWindow" to="." method="_on_ExitConfirmWindow_confirm_pressed"]
